# LinksDash

./: CMakeLists.txt  LICENSE  README.md  main.cpp  main.h  utilities.cpp  utilities.h
.github/workflows/: release-builds.yml
assets/: resources.qrc
assets/icons/windows/: LinksDash.rc
data/: database_service.cpp  database_service.h
dialogs/: link_dialog.cpp  link_dialog.h  link_dialog.ui
models/: link_item.h
scripts/: generate_icons.sh  png2ico.py
window/: main_window.cpp  main_window.h  main_window.ui
